--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.2",
     "os": "^0.1.2"
   }
 }
